# pitstop

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 5aa88876da4e_service_records_reminders_notifications.py  74010ff95bc3_fuel_ups_charge_sessions_odometer_.py  8f4beec1bd11_instance_settings_driving_conditions_.py  bc24742df594_attachments.py  ee2e568bfa33_initial_schema_users_and_vehicles.py  f9a623619f9e_user_onboarding_flag.py
backend/pitstop/: config.py  db.py  deps.py  economy.py  importer.py  main.py  models.py  notify.py  premigrate.py  reminders.py  schemas.py  security.py  seed.py
backend/pitstop/api/: admin.py  attachments.py  auth.py  charges.py  entries.py  export.py  fuelups.py  grades.py  imports.py  notifications.py  service.py  stats.py  vehicles.py
backend/tests/: conftest.py  test_admin_users.py  test_auth.py  test_economy.py  test_fuelups_api.py  test_grades.py  test_grades_api.py  test_import_export.py  test_migrations.py  test_onboarding.py  test_phase6.py  test_reminders.py  test_service_api.py  test_vehicles.py
docs/: DEPLOY.md  DESIGN.md
docs/mockups/: 01-pump-logging.html  02-fuel-grade-comparison.html  03-buy-advisor.html  04-garage.html  05-service-reminders.html
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/scripts/: make-icons.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  (+2 more)
(+24 files in other folders)
