[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pitstop"
version = "0.1.0"
description = "Self-hosted fuel & maintenance tracker"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "argon2-cffi>=23.1",
    "PyJWT>=2.9",
    "email-validator>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["pitstop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
